--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,17 @@ jobs:
     - name: Build with Maven
       run: mvn clean verify
 
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      with:
-        args: >
-          -Dsonar.projectKey=rchumacero_quarkus-demo
-          -Dsonar.organization=rodrigo_chumacero
-          -Dsonar.host.url=https://sonarcloud.io
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+    - name: Run SonarCloud Analysis
+      run: mvn verify sonar:sonar -Dsonar.projectKey=jfragoso_quarkus-demo -Dsonar.organization=jfragoso -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.java.binaries=target/classes
+            
+    - name: Verificar Quality Gate via API
+      run: |
+          sleep 10  # espera a que SonarCloud procese
+          STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
+            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=jfragoso_quarkus-demo" \
+            | jq -r '.projectStatus.status')
+          echo "Estado Quality Gate: $STATUS"
+          if [ "$STATUS" != "OK" ]; then
+            echo "❌ Quality Gate fallido"
+            exit 1
+          fi
